[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# build = "build.rs"# LALRPOP preprocessing
[lib]
name="sysylib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
lazy_static = "1.4"
biheap={path="./dep/biheap"}
lalrpop-util = {version = "0.19.9", features = ["lexer"]}
regex = "1"
clap = "2.33"

rand = "0.8.5"
hexf-parse = "0.2.1"

[build-dependencies]
lalrpop = "0.19.9"
